# mRemotify

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build-images.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20240101000000_init/: migration.sql
backend/prisma/migrations/20260301000000_add_clipboard_enabled/: migration.sql
backend/prisma/migrations/20260301100000_add_profiles/: migration.sql
backend/prisma/migrations/20260301110000_profile_protocol/: migration.sql
backend/src/: index.ts  seed.ts
backend/src/lib/: backup-crypto.test.ts  backup-crypto.ts  mremoteng-parser.test.ts  mremoteng-parser.ts
backend/src/plugins/: prisma.ts
backend/src/routes/: auth.ts  connections.ts  export.ts  folders.ts  import.ts  profiles.ts
backend/src/utils/: encryption.ts  resolveCredentials.ts
backend/src/websocket/: rdp.ts  sftp.ts  ssh.ts
docker/: backend.Dockerfile  docker-entrypoint.sh  frontend.Dockerfile  nginx.conf.template
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.css
frontend/src/api/: client.ts
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/pages/: LoginPage.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
rdpd/: Cargo.toml  Dockerfile
rdpd/src/: capture.rs  input.rs  main.rs  protocol.rs  session.rs  session_manager.rs  xfreerdp.rs
(+18 files in other folders)
